--- a/src/Lucky_draw/Lucky_draw.css
+++ b/src/Lucky_draw/Lucky_draw.css
@@ -1,8 +1,37 @@
-.logo {
+.row{
+    margin-top: 20px;
+}
+
+.cathay_logo {
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
+    margin-top: 20px;
+}
+
+.prize-image{
+    height: 400px;
+    width: 400px;
+    margin-top: 30px;
+}
+
+.draw-button{
+    margin-top: 20px;
+}
+
+.text{
+    font-size: 30px;
+    font-family: Georgia, 'Times New Roman', serif;
+    color: rgb(0, 100, 90);
+    font-weight: bold;
+}
+
+.prize-text{
+    font-size: 25px;
+    font-family: Georgia, 'Times New Roman', serif;
+    color: rgb(0, 100, 90);
+    font-weight: bold;
 }
