--- a/src/Lucky_draw_result/Lucky_draw_result.css
+++ b/src/Lucky_draw_result/Lucky_draw_result.css
@@ -1,8 +1,21 @@
-.congrats-message{
-  position: relative;
-  width: 320px;
-  display: block;
-  margin: 40px auto;
-  text-align: center;
-  font-family: 'Source Sans Pro', sans-serif;
-}
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  }
+  
+  .congrats-message {
+    margin-top: 150px;
+  }
+
+  .congrats-card {
+
+  }
+
+  .result-return{
+      margin-top: 30px;
+  }
+
+
+  
